SEO metadata + social + title + logo

--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,22 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, initial-scale=1" />
 
-        <title>dbt Docs</title>
-        <meta name="description" content="dbt Docs" />
+        <title>Dune Spellbook</title>
+        <meta name="description" content="Documentation for Spellbook, a data transformation layer for Dune, built by the community." />
         <link rel="canonical" href="/overview/" />
 
-        <link rel="shortcut icon" href="${require('./assets/favicons/favicon.ico')}" />
+        <!-- <link rel="shortcut icon" href="${require('./assets/favicons/favicon.ico')}" /> -->
+        <link rel="shortcut icon" type="image/png" href="https://dune.com/assets/glyph-32w.png">
         <meta name="msapplication-TileColor" content="#2b5797">
         <meta name="theme-color" content="#ffffff">
 
         <meta property="og:locale" content="en_US" />
         <meta property="og:type" content="website" />
-        <meta property="og:site_name" content="dbt Docs" />
-        <meta property="og:title" content="dbt Docs" />
-        <meta property="og:description" content="documentation for dbt" />
-        <meta name="twitter:title" content="dbt Docs"/>
-        <meta name="twitter:description" content="documentation for dbt"/>
+        <meta property="og:site_name" content="Dune Spellbook" />
+        <meta property="og:title" content="Dune Spellbook" />
+        <meta property="og:description" content="Documentation for Spellbook, a data transformation layer for Dune, built by the community." />
+        <meta name="twitter:title" content="Dune Spellbook"/>
+        <meta name="twitter:description" content="Documentation for Spellbook, a data transformation layer for Dune, built by the community."/>
 
     </head>
     <body>
